@@ -3,6 +3,7 @@
 	  - added bytecmp, has_str_changed, has_md_changed, compare_single_acl,
 	    has_acl_changed, cmp_xattr_node, have_xattrs_changed (copied and
 	    renamed from src/compare_db.c)
+	  - added get_changed_attributes function
 
 2010-09-24	Hannes von Haugwitz <hannes@vonhaugwitz.com>
 	* include/compare_db.h: removed init_rxlst function
